--- a/Forecast.Rmd
+++ b/Forecast.Rmd
@@ -28,7 +28,7 @@ library(betalink)
 library(ggbiplot)
 library(igraph)
 
-opts_chunk$set(message=FALSE,warning=FALSE,fig.width=10,fig.height=7,echo=F,cache=F,fig.align='center',fig.path="figureObserved/")
+opts_chunk$set(message=FALSE,warning=FALSE,fig.width=10,fig.height=6,echo=F,cache=F,fig.align='center',fig.path="figureObserved/")
 
 #source functions
 source("models/Functions.R")
@@ -50,7 +50,7 @@ fulldat<-read.csv("data/fulldat.csv",row.names=1)
 fulldat$timestamp<-as.POSIXct(fulldat$timestamp)
 
 #Testing
-#fulldat<-fulldat %>% sample_n(100)
+fulldat<-fulldat %>% sample_n(100)
 ```
 
 ```{r}
@@ -247,7 +247,7 @@ runModel<-function(Yobs_dat,Ynew_dat){
   Ynew<-Ynew_dat$Yobs
   
   Dat<-list(
-    Birds=max(c(Yobs_dat$jBird,Ynew_dat$jPlant)),
+    Birds=max(c(Yobs_dat$jBird,Ynew_dat$jBird)),
     Bird=Yobs_dat$jBird,
     Plant=Yobs_dat$jPlant,
     Plants=max(c(Yobs_dat$jPlant,Ynew_dat$jPlant)),
@@ -259,7 +259,7 @@ runModel<-function(Yobs_dat,Ynew_dat){
   
   #MCMC options
     system.time(
-      m2<-jags(data=Dat,parameters.to.save=ParsStage,inits=InitStage,model.file="models/SpeciesIdentity.jags",n.thin=1,n.iter=1000,n.burnin=900,n.chains=2,DIC=F)
+      m2<-jags(data=Dat,parameters.to.save=ParsStage,inits=InitStage,model.file="models/SpeciesIdentity.jags",n.thin=1,n.iter=10000,n.burnin=9900,n.chains=2,DIC=F)
     )
     return(m2)
 }
@@ -343,7 +343,7 @@ runModel<-function(Yobs_dat,Ynew_dat){
   
   Dat<-list(
     Yobs=Yobs,
-    Birds=max(c(Yobs_dat$jBird,Ynew_dat$jPlant)),
+    Birds=max(c(Yobs_dat$jBird,Ynew_dat$jBird)),
     Bird=Yobs_dat$jBird,
     Plant=Yobs_dat$jPlant,
     Plants=max(c(Yobs_dat$jPlant,Ynew_dat$jPlant)),
@@ -355,7 +355,7 @@ runModel<-function(Yobs_dat,Ynew_dat){
   
   #MCMC options
     system.time(
-      m2<-jags(data=Dat,parameters.to.save=ParsStage,inits=InitStage,model.file="models/SpeciesIdentity.jags",n.thin=1,n.iter=1000,n.burnin=900,n.chains=2,DIC=F)
+      m2<-jags(data=Dat,parameters.to.save=ParsStage,inits=InitStage,model.file="models/SpeciesIdentity.jags",n.thin=1,n.iter=10000,n.burnin=9900,n.chains=2,DIC=F)
     )
     return(m2)
 }
@@ -453,7 +453,7 @@ runModel<-function(Yobs_dat,Ynew_dat){
   
   Dat<-list(
     Yobs=Yobs,
-    Birds=max(c(Yobs_dat$jBird,Ynew_dat$jPlant)),
+    Birds=max(c(Yobs_dat$jBird,Ynew_dat$jBird)),
     Bird=Yobs_dat$jBird,
     Plant=Yobs_dat$jPlant,
     Plants=max(c(Yobs_dat$jPlant,Ynew_dat$jPlant)),
@@ -465,7 +465,7 @@ runModel<-function(Yobs_dat,Ynew_dat){
   
   #MCMC options
     system.time(
-      m2<-jags(data=Dat,parameters.to.save=ParsStage,inits=InitStage,model.file="models/SpeciesIdentity_Detect.jags",n.thin=1,n.iter=1000,n.burnin=900,n.chains=2,DIC=F)
+      m2<-jags(data=Dat,parameters.to.save=ParsStage,inits=InitStage,model.file="models/SpeciesIdentity_Detect.jags",n.thin=1,n.iter=30000,n.burnin=29900,n.chains=2,DIC=F)
     )
     return(m2)
 }
@@ -499,6 +499,12 @@ getChains<-function(mod){
     sv<-data.frame(str_match(x$par,"(\\w+)\\[(\\d+)]"))[,3]
     pc<-data.frame(x,Index=sv)
     })
+  
+  splitpc[c("detect")]<-lapply(
+    splitpc[c("detect")],function(x){
+    sv<-data.frame(str_match(x$par,"(\\w+)\\[(\\d+)]"))[,3]
+    pc<-data.frame(x,jBird=sv)
+    })
     
   chains<-bind_rows(splitpc)
 return(chains)}
@@ -519,6 +525,9 @@ networks$Species_Detect<-getPredictions(chains$Species_Detect,Ynew_dat = Ynew_da
 chains$Species_Detect %>% filter(parameter == "fitnew")  %>% ggplot(.,aes(x=Draw,y=value,col=as.factor(chain))) + geom_line()  + theme_bw() + labs(col="Chain") + facet_wrap(~parameter)
 ```
 
+```{r,fig.height=8,fig.width=11}
+chains$Species_Detect %>% filter(parameter == "detect") %>% mutate(jBird=as.numeric(jBird)) %>% inner_join(jagsIndexBird) %>% ggplot(.,aes(x=Draw,y=value,col=as.factor(chain))) + geom_line()  + theme_bw() + labs(col="Chain") + facet_wrap(~Hummingbird,ncol=3)
+```
 # Incorportating species occurrence 
 
 If species co-occurrence is a prerequisite for interaction, then the absence of interactions may stem either from a lack of detectability or species absence. We can jointly model the presence of species as a function of elevation and then existance of an interaction.
@@ -559,7 +568,7 @@ runModel<-function(Yobs_dat,Ynew_dat){
     list(dcam=initB,znew=znew,z=z,Ynew_pred=Ynew_pred,occ_new=occ_new,occ=occ)}
   
   #Parameters to track
-  ParsStage <- c("alpha","Ynew_pred","fit","fitnew","Enew","alpha_occ","beta_occ","beta2_occ")
+  ParsStage <- c("alpha","Ynew_pred","fit","fitnew","Enew","alpha_occ","beta_occ","beta2_occ","detect")
   
   #Jags Data
   Yobs<-Yobs_dat$Yobs
@@ -567,7 +576,7 @@ runModel<-function(Yobs_dat,Ynew_dat){
   
   Dat<-list(
     Yobs=Yobs,
-    Birds=max(c(Yobs_dat$jBird,Ynew_dat$jPlant)),
+    Birds=max(c(Yobs_dat$jBird,Ynew_dat$jBird)),
     elevation=Yobs_dat$ele,
     elevation_new=Ynew_dat$ele,
     Bird=Yobs_dat$jBird,
@@ -581,7 +590,7 @@ runModel<-function(Yobs_dat,Ynew_dat){
   
   #MCMC options
     system.time(
-      m2<-jags(data=Dat,parameters.to.save=ParsStage,inits=InitStage,model.file="models/SpeciesIdentity_Detect_Elevation.jags",n.thin=1,n.iter=1000,n.burnin=900,n.chains=2,DIC=F)
+      m2<-jags(data=Dat,parameters.to.save=ParsStage,inits=InitStage,model.file="models/SpeciesIdentity_Detect_Elevation.jags",n.thin=1,n.iter=30000,n.burnin=29900,n.chains=2,DIC=F)
     )
     return(m2)
 }
@@ -610,10 +619,10 @@ getChains<-function(mod){
     pc<-data.frame(x,sv)
     })
   
-    splitpc[c("alpha_occ","beta_occ","beta2_occ")]<-lapply(
-    splitpc[c("alpha_occ","beta_occ","beta2_occ")],function(x){
-    sv<-data.frame(str_match(x$par,"(\\w+)\\[(\\d+)]"))[,3]
-    pc<-data.frame(x,jBird=sv)
+    splitpc[c("alpha_occ","beta_occ","beta2_occ","detect")]<-lapply(
+    splitpc[c("alpha_occ","beta_occ","beta2_occ","detect")],function(x){
+      sv<-data.frame(str_match(x$par,"(\\w+)\\[(\\d+)]"))[,3]
+      pc<-data.frame(x,jBird=sv)
     })
   
   splitpc[c("Ynew_pred","Enew")]<-lapply(
@@ -642,6 +651,10 @@ networks$Species_Detect_Elevation<-getPredictions(chains$Species_Detect_Elevatio
 chains$Species_Detect_Elevation %>% filter(parameter == "fitnew")  %>% ggplot(.,aes(x=Draw,y=value,col=as.factor(chain))) + geom_line()  + theme_bw() + labs(col="Chain") + facet_wrap(~parameter)
 ```
 
+```{r,fig.height=8,fig.width=11}
+chains$Species_Detect_Elevation %>% filter(parameter == "detect") %>% mutate(jBird=as.numeric(jBird)) %>% inner_join(jagsIndexBird) %>% ggplot(.,aes(x=Draw,y=value,col=as.factor(chain))) + geom_line()  + theme_bw() + labs(col="Chain") + facet_wrap(~Hummingbird,ncol=3)
+```
+
 ### Elevation ranges
 
 ```{r}
@@ -657,15 +670,35 @@ ggplot(bird_range,aes(x=elevation))  + geom_line(aes(y=mean)) + geom_ribbon(aes(
 
 # Model Comparison
 
-## Proportion of predicted observations
-
-```{r,fig.height=7,fig.width=8}
-#A bit ugly, but let's assign names.
+```{r}
+#Assign names.
 for(x in 1:length(chains)){
     chains[[x]]<-chains[[x]] %>% mutate(Model=names(chains)[x])
   }
 
 allchains<-bind_rows(lapply(chains,bind_rows))
+
+Ynew_dat$Index<-1:nrow(Ynew_dat)
+```
+
+## By Species
+```{r,fig.height=7,fig.width=6}
+disc<-allchains %>% filter(parameter %in% "Enew") %>% mutate(Index=as.numeric(Index)) %>% inner_join(Ynew_dat,by="Index") %>% group_by(Model,Hummingbird) %>% dplyr::summarize(value=mean(value))
+
+ggplot(disc,aes(x=Hummingbird,y=value,col=Model)) + geom_point()  + labs(x="Elevation",y="Mean Predictive Error") + coord_flip()
+
+#disc<-allchains %>% filter(parameter %in% "Enew") %>% mutate(Index=as.numeric(Index)) %>% inner_join(Ynew_dat,by="Index") %>% filter(Hummingbird %in% "Stripe-throated Hermit") %>% group_by(Model,Index,ele,Yobs) %>% dplyr::summarize(value=mean(value))
+```
+
+## Detectability
+
+```{r}
+allchains %>% filter(parameter %in% "detect") %>% mutate(jBird=as.numeric(jBird)) %>% inner_join(jagsIndexBird) %>% ggplot(.,aes(x=value,fill=Model)) + geom_density() + facet_wrap(~Hummingbird,scales="free")
+```
+
+## Proportion of predicted observations
+
+```{r,fig.height=7,fig.width=8}
 
 fitnew<-allchains %>% filter(parameter=="Enew")  %>% mutate(Level=str_extract(Model,"_(\\w+)")) %>% group_by(Model) %>% mutate(Index=as.numeric(Index)) %>% select(Model,Level,Draw,chain,Index,value) %>% inner_join(Ynew_dat,by="Index") %>% separate(Model,sep="_",c("Model","Detect","Elevation")) %>% select(-Detect,-Elevation)  %>% group_by(Model,Level,Draw,chain,Yobs) %>% dplyr::summarize(p=sum(value)/n())
 
@@ -696,6 +729,12 @@ obs_matrix<-melt(m_new) %>% select(Hummingbird=Var1,Iplant_Double=Var2,value) %>
 ```{r,fig.height=4,fig.width=7}
 netdf<-melt(networks)
 
+netdf %>% group_by(L1,value) %>% dplyr::summarize(n=n()) %>% spread(value,n) %>% select(Model=L1,Presence=`1`,Absence=`0`) %>% mutate(p=Presence/(Presence + Absence)*100)
+
+paste("True presence rate is:",round(sum(obs_matrix$value==1)/(sum(obs_matrix$value==1)+sum(obs_matrix$value==0)),3)*100)
+```
+
+```{r}
 true_positives<-netdf %>% select(Hummingbird=Var1,Iplant_Double=Var2,value,Iteration=L2,Model=L1) %>% mutate(Link=paste(Hummingbird,Iplant_Double,sep="_")) %>% group_by(Model,Link,Iteration) %>% dplyr::summarize(value=max(value)) %>% filter(value==1) %>% filter(Link %in% obs_matrix$Link[obs_matrix$value==1]) %>% group_by(Model,Iteration) %>% dplyr::summarize(n=n()) %>% dplyr::summarize(mean=mean(n),lower=quantile(n,0.05),upper=quantile(n,0.95))
 
 true_negatives<-netdf %>% select(Hummingbird=Var1,Iplant_Double=Var2,value,Iteration=L2,Model=L1) %>% mutate(Link=paste(Hummingbird,Iplant_Double,sep="_")) %>% group_by(Model,Link,Iteration) %>% dplyr::summarize(value=max(value)) %>% filter(value==0) %>% filter(Link %in% obs_matrix$Link[obs_matrix$value==0]) %>% group_by(Model,Iteration) %>% dplyr::summarize(n=n()) %>% dplyr::summarize(mean=mean(n),lower=quantile(n,0.05),upper=quantile(n,0.95))
@@ -706,7 +745,7 @@ false_negatives<-netdf %>% select(Hummingbird=Var1,Iplant_Double=Var2,value,Iter
 
 conf_matrix<-melt(list(true_positives=true_positives,true_negatives=true_negatives,false_positives=false_positives,false_negatives=false_negatives)) %>% select(Model,variable,value,Metric=L1) %>% spread(Metric,value) %>% mutate(recall=true_positives/(true_positives+false_negatives),precision=true_positives/(true_positives+false_positives)) %>% select(Model,stat=variable,recall,precision) %>% melt(id.vars=c("Model","stat")) %>% dcast(Model+variable~stat)
 
-ggplot(conf_matrix,aes(x=Model)) + facet_wrap(~variable,scales="free") + geom_linerange(aes(ymin=lower,ymax=upper)) + geom_point(aes(y=mean)) + coord_flip()
+ggplot(conf_matrix,aes(x=Model)) + facet_grid(~variable,scales="free") + geom_linerange(aes(ymin=lower,ymax=upper)) + geom_point(aes(y=mean)) + coord_flip() + theme_bw()
 
 #ggsave("Figures/PredLinksBoth.svg")
 #ggsave("Figures/PredLinksBoth.jpeg",height=3,width=7)
@@ -793,7 +832,11 @@ levels(mobs_dis$Betadiversity)[levels(mobs_dis$Betadiversity) %in% "S"]<-"Specie
 ggplot(betastat %>% filter(!Betadiversity %in% "Species Turnover"),aes(x=value,fill=Model)) + geom_density(alpha=0.4) + facet_grid(Level~Betadiversity,scales="free") + geom_vline(data=mobs_dis  %>% filter(!Betadiversity %in% "Species Turnover"),aes(xintercept=value),linetype="dashed") + theme_bw()
 ```
 
-# Mechanistic  Models
+# Interaction Betadiversity
+
+```{r}
+
+```
 
 # Model overlap
 
